# comfyui_LLM_schools

./: .gitignore  README.md  README_ZH.md  __init__.py  config.ini.example  dataset.py  example.py  install.py  pyproject.toml  requirements.txt  train.py  train_core.py
workflow/: The_first_training.json  lora.json  第一个训练工作流.json
